--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@elsdoerfer/lightbox-framework",
   "version": "1.0.0",
   "description": "React composible lightbox",
-  "main": "./dist/index.js",
-  "module": "./src/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./index.cjs.js",
+  "module": "./index.es.js",
+  "types": "./index.d.ts",
   "repository": "https://github.com/miracle2k/lightbox-framework.git",
   "author": "Michael Elsdörfer <michael@elsdoerfer.com>",
   "license": "MIT",
@@ -22,9 +22,11 @@
     "react-dom": "^16.8.3",
     "rollup": "^1.27.8",
     "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-copy": "^3.1.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-typescript2": "^0.25.3",
     "tslib": "^1.10.0",
     "typescript": "^3.7.3"
-  }
+  },
+  "dependencies": {}
 }
